--- a/.github/workflows/ClosingIssues.yml
+++ b/.github/workflows/ClosingIssues.yml
@@ -3,7 +3,7 @@ name: Close Issues on Master Merge
 on:
   push:
     branches:
-      - main   # Solo cuando haya un merge/push a master
+      - main  # Solo cuando haya un merge/push a master
 
 jobs:
   close-issues:
@@ -12,28 +12,29 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Trae todo el historial de commits
 
-      - name: Get commit messages from this push
+      - name: Get commit messages
         id: get_commits
         run: |
-          # Extrae todos los mensajes de commit en el rango del push
-          echo "COMMITS<<EOF" >> $GITHUB_ENV
-          git log ${{ github.event.before }}..${{ github.sha }} --pretty=%B >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+          # Extrae todos los mensajes de commit en este push
+          COMMITS=$(git log --pretty=%B ${{ github.event.before }}..${{ github.sha }})
+          echo "$COMMITS" > commits.txt
 
       - name: Find issue references
         id: find_issues
         run: |
-          # Busca referencias tipo #123 en todos los commits
-          issues=$(echo "${COMMITS}" | grep -oE '#[0-9]+' | tr -d '#' | sort -u)
-          echo "issues=$issues" >> $GITHUB_ENV
+          issues=$(grep -oE '#[0-9]+' commits.txt | tr -d '#' | sort -u)
+          echo "issues=$issues" > issues.txt
 
       - name: Close referenced issues
-        if: env.issues != ''
+        if: ${{ steps.find_issues.outputs.issues != '' }}
         run: |
+          issues=$(cat issues.txt)
           for issue in $issues; do
             echo "Closing issue #$issue"
-            gh issue close $issue --comment "Closed automatically: fix was merged into master."
+            gh issue close $issue --comment "Closed automatically: fix was merged into main."
           done
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
