--- a/.github/workflows/FTP.yml
+++ b/.github/workflows/FTP.yml
@@ -21,5 +21,5 @@ jobs:
           protocol: ftp
           port: 21
           local-dir: ./       # Todo el repo
-          server-dir: /htdocs # Carpeta remota en InfinityFree
+          server-dir: /htdocs/ # Carpeta remota en InfinityFree
 
