--- a/config/storage.yml
+++ b/config/storage.yml
@@ -34,3 +34,6 @@ local:
 #   mirrors: [ amazon, google, microsoft ]
 cloudinary:
   service: Cloudinary
+  cloud_name: <%= ENV['CLOUDINARY_CLOUD_NAME'] %>
+  api_key:    <%= ENV['CLOUDINARY_API_KEY'] %>
+  api_secret: <%= ENV['CLOUDINARY_API_SECRET'] %>
